// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmationModal it renders without crashing 1`] = `
<div>
  <div
    class="modal"
    id="confirmModal"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="modal-dialog modal-dialog-centered"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-body modal-open-text"
        >
          *Selected role for this member is
           
          <span
            class="confirm-message"
          >
            Volunteer
          </span>
          , who will have
           
          <span
            class="confirm-message"
          >
            Limited access to areas of portal
          </span>
          <div
            class="d-flex justify-content-center"
          >
            <button
              class="modal-confirm-btn"
              data-bs-dismiss="modal"
              type="button"
            >
              Confirm
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EmailInput it renders without crashing 1`] = `
<div>
  <div
    class="div-inline responsive-div-block"
  >
    <p
      class="hide"
    />
    <input
      class="form-control email-input"
      id="email"
      name="Email"
      placeholder="eg. sam@wwcode.com"
      required=""
      type="email"
      value=""
    />
    <div
      class="spacer"
    />
    <div
      class="edit-icon"
    >
      <img
        alt="Edit"
        class="hide"
        src="edit_24px.png"
        style="width: auto; height: auto;"
      />
    </div>
    <button
      class="hide"
      type="submit"
    >
      Save
    </button>
  </div>
</div>
`;

exports[`InputLabel it renders without crashing 1`] = `
<div>
  <div>
    <label
      class="input-label"
      for="test"
    >
      hello world!
    </label>
  </div>
</div>
`;

exports[`RoleRadioField it renders without crashing 1`] = `
<div>
  <input
    class="form-check-input position-static role-radio"
    data-bs-target="#confirmModal"
    data-bs-toggle="modal"
    id="1"
    name="Role"
    type="radio"
    value="Volunteer"
  />
  <div
    class="member-role"
  >
    Volunteer
  </div>
  <div
    class="role-desc"
  >
    Limited access to areas of portal
  </div>
</div>
`;

exports[`SuccessModal it renders without crashing 1`] = `
<div>
  <div
    class="modal modal-success-bg show"
    id="successModal"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="modal-dialog modal-dialog-centered"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header modal-success-header"
        >
          <button
            aria-label="Close"
            class="close"
            data-bs-dismiss="modal"
            type="button"
          >
            <span
              aria-hidden="true"
            >
              ×
            </span>
          </button>
        </div>
        <div
          class="modal-body modal-success-body"
        >
          <div
            class="modal-success-title"
          >
            Success!
          </div>
          <div
            class="modal-success-body-text"
          >
             
            Member has been added and emailed a registration link
          </div>
          <div
            class="d-flex justify-content-center"
          >
            <button
              class="modal-success-btn"
              data-dismiss="modal"
              type="button"
            >
              Close
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextAreaInput it renders without crashing 1`] = `
<div>
  <div
    class="div-inline responsive-div-block"
  >
    <p />
    <div
      style="display: block;"
    >
      <textarea
        class="form-control message-textarea"
        data-testid="message"
        id="message"
        maxlength="2000"
        name="Message"
        placeholder="Add an optional message to the registration email sent to the user (max 2000 char)"
        rows="6"
      />
      <div
        class="message-counter"
      >
        12/2000 char
      </div>
    </div>
    <div
      class="spacer"
    />
    <div
      class="edit-icon"
    >
      <img
        alt="Edit"
        class="hide"
        src="edit_24px.png"
        style="width: auto; height: auto;"
      />
    </div>
    <button
      class="hide"
      type="submit"
    >
      Save
    </button>
  </div>
</div>
`;
